--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="styles.css" rel="stylesheet" />
-  <title>Mithril</title>
+  <title>mithril</title>
 </head>
 <body>
   <script src="index.js"></script>
