--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="styles.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css" />
   <title>mithril</title>
 </head>
 <body>
